Files/3 Gateways/6-istio-rules.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-configuration
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*" # Domainname of the external webiste
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: fleetman-webapp
  namespace: default
spec:
  hosts:
    - "*"  # Copy the value in the gateway hosts
  gateways:
    - ingress-gateway-configuration
  http:
    - match:
      - headers: # IF
          my-header:
            exact: canary
      route: # THEN
      - destination:
          host: fleetman-webapp.default.svc.cluster.local
          subset: experimental
    - route: # CATCH ALL
      - destination:
          host: fleetman-webapp.default.svc.cluster.local
          subset: original
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: fleetman-webapp
  namespace: default
spec:
  host: fleetman-webapp.default.svc.cluster.local
  subsets:
    - labels:
        version: original
      name: original
    - labels:
        version: experimental
      name: experimental
